# titler

./: .gitignore  README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-4-link
src/: de-screamer.py  local_v1.py  main.py  misc_utils.py  ollama.py  pdf_utils.py  strip-keyword.py  utils.py
