[tool.poetry]
name = "titler"
version = "0.1.0"
description = ""
authors = ["jer <alphastrata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.9"
requests = "^2.32.3"
torch = "^2.4.0"
transformers = "^4.43.3"
datetime = "^5.5"
torchaudio = "^2.4.0"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
